envs/project/networking.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.project_vpc.id

    tags = {
        Name = "project-igw"
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.project_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
        Name = "public-route-table"
    }
}

resource "aws_route_table_association" "p1" {
    subnet_id = aws_subnet.public_1.id
    route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "p2" {
    subnet_id = aws_subnet.public_2.id
    route_table_id = aws_route_table.public_rt.id
}
