envs/project/vpc.tf
resource "aws_vpc" "project_vpc" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "project_vpc"
        Owner = var.owner
    }
}
